<resources>
    <string name="app_name">لياقه الكوكب</string>
    <string name="facebook_app_id">1040081509514806</string>
    <string name="fb_login_protocol_scheme">fb1040081509514806</string>

    <string name="new_message_notification_title_template">New message: %1$s</string>

    <!-- TODO: remove this placeholder text -->
    <string name="new_message_notification_placeholder_text_template">You said %1$s and lorem ipsum
        dolor sit amet, consectetur adipiscing elit. Etiam non enim magna. Morbi dictum, velit vel
        semper venenatis, magna odio volutpat velit, at ullamcorper nulla lacus sed turpis.
        Pellentesque vitae metus elit, nec tincidunt tellus. Integer sed nisl sem, ullamcorper
        ornare lacus. Duis ac mauris sed massa congue volutpat. Donec sed erat sit amet turpis
        viverra rhoncus sit amet nec magna. Donec lacinia ligula at libero volutpat volutpat nec nec
        tortor.
    </string>

    <string name="action_share">Share</string>
    <string name="action_reply">Reply</string>

    <string-array name="types">
        <item>مقالات عامه</item>
        <item>وصفات طعام</item>
        <item>بطولات رياضيه</item>
        <item>عضلات الجسم</item>
        <item>مكملات غذائيه</item>
    </string-array>


    <!-- Main Activity/Fragment -->
    <string name="empty_view_text">لا توجد وجبات اضف البعض!</string>

    <!-- Edit Alarm Activity/Fragment -->
    <string name="time">وقت التنبيه</string>
    <string name="label">Label</string>
    <string name="days">Days</string>
    <string name="edit_alarm">تعديل التنبيه</string>
    <string name="add_alarm">اضافه وجبه</string>
    <string name="add_label_hint">Add a label!</string>
    <string name="update_complete">Changes Saved</string>
    <string name="update_failed">Update Failed</string>
    <string name="delete_complete">Alarm Deleted</string>
    <string name="delete_failed">Delete Failed</string>
    <string name="delete_dialog_title">تأكيد الحذف</string>
    <string name="delete_dialog_content">هل انت متأكد من حذف هذه الوجبه ؟</string>
    <string name="yes">نعم</string>
    <string name="no">لا</string>

    <!-- Edit Alarm Menu -->
    <string name="action_save">حفظ</string>
    <string name="action_delete">حذف</string>

    <!-- Alarm Landing Page Activity/Fragment -->
    <string name="launch_main_activity">Launch Main Activity</string>
    <string name="dismiss">Dismiss</string>

    <!-- Days -->
    <string name="monday">الاثنين</string>
    <string name="tuesday">الثلاثاء</string>
    <string name="wednesday">الاربعاء</string>
    <string name="thursday">الخميس</string>
    <string name="friday">الجمعه</string>
    <string name="saturday">السبت</string>
    <string name="sunday">الاحد</string>

    <!-- Notification -->
    <string name="channel_name">Simple Alarms</string>

</resources>
